<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="log_in">Войти</string>
    <string name="hint_pass">Password</string>
    <string name="hint_login">Login</string>
    <string name="start">Старт</string>
    <string name="fill_the_fields">Заполните все поля</string>


    <string name="title_stores">Магазины</string>
    <string name="title_category">Категории</string>
    <string name="title_shelves">Полки</string>
    <string name="log_out">выйти</string>
    <string name="app_name">ShelfCatcher</string>
    <string name="photo_cancel">Отмена</string>
    <string name="photo_upload_to_server">отправить</string>
    <string name="photo_new_photo">переснять</string>
    <string name="photo_next_photo">следующую фотография</string>
    <string name="report_ok">Отчет успешно отправлен</string>
    <string name="report_error">При отправке отчета произошла ошибка, попробуйте еще раз</string>
    <string name="network_connection_error">проверьте подключение к интернету</string>
    <string name="user_not_found">проверьте правильность логина и пароля</string>
    <string name="tv_take_picture">Сфотографируйте полки с нашими товарами.</string>
    <string name="bt_photo">Фото</string>
    <string name="my_yes">Да</string>


</resources>
