<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fragment_photo_report_upload_photo"
            android:text="@string/photo_upload_to_server"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"/>
    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/photo_new_photo"
            android:gravity="center"
            android:id="@+id/fragment_photo_report_new_photo"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/fragment_photo_report_upload_photo"/>
    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/photo_next_photo"
            android:gravity="center"

            android:id="@+id/fragment_photo_report_next_photo"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@+id/fragment_photo_report_upload_photo"/>

</RelativeLayout>